# EvaQL

./: .gitignore  Cargo.toml  README.md
backend/: .env  Cargo.toml  Makefile.toml
backend/db/: schema.json  tokenizer.json
backend/db/character/: ikari_shinji.json
backend/src/: db.rs  main.rs  schema.rs
ui/: Cargo.toml  Makefile.toml  README.md  index.html  package-lock.json  package.json
ui/native/: Cargo.toml
ui/native/src/: lib.rs
ui/public/: index.html
ui/src/: lib.rs
