[package]
name = "native"
version = "0.1.0"
authors = ["BrainVader <brainvade@gmail.com>"]
description = "quiz editor"
categories = ["wasm", "rust", "tailwind", "seed", "graphql"]
readme = "../README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.60"
seed = "0.6.0"